# cpp-unit-test-tutorial

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: ClangFormat.cmake  Coverage.cmake  GTestSetup.cmake  HomebrewQt5.cmake
workshop/: CMakeLists.txt
workshop/01_code_structure/: CMakeLists.txt  README.md  bad_structure.cpp  good_structure.cpp
workshop/02_unit_tests/: CMakeLists.txt  README.md  bad_tests.cpp  good_tests.cpp
workshop/03_hardware_deps/: CMakeLists.txt  README.md  bad_hw_dependency.cpp  good_hw_dependency.cpp
workshop/04_qt_signals_slots/: CMakeLists.txt  README.md  bad_qt_tests.cpp  good_qt_tests.cpp
workshop/05_dependency_injection/: CMakeLists.txt  README.md  di_tests.cpp
workshop/05_dependency_injection/bad/: bad_di.cpp
workshop/05_dependency_injection/good/: good_di_plain.cpp  good_di_qt.cpp  good_di_qt.h  main.cpp
workshop/06_refactoring/: CMakeLists.txt  README.md  flow_controller_test_doubles.h  flow_controller_tests.cpp  flow_controller_v1.cpp  flow_controller_v2.cpp  hardware_adapters.cpp  interfaces.h  main.cpp
workshop/07_deterministic_testing/: CMakeLists.txt  README.md  concurrency_examples.h  deterministic_tests.cpp  hardware_interaction.h  iclock.h  timing_examples.h
workshop/08_blackbox_testing/: CMakeLists.txt  README.md  generate_blackbox_tests.py  pressure_regulator.cpp  pressure_regulator.h
workshop/08_blackbox_testing/example_tests/: pressure_regulator_tests.cpp
